<resources>
    <string name="app_name">Debt Reminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tika Marita</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="statistical_chart">Statistical Chart</string>
    <string name="data_synchronization">Data Synchronization</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="filter">Filter</string>
    <string name="jumlah_yang_dibayar">Jumlah yang Dibayar</string>
    <string name="sisa_pinjaman">Sisa Pinjaman</string>
    <string name="jumlah_pinjaman_total">Jumlah Pinjaman Total</string>
    <string name="sentuh">Sentuh untuk melihat laporan lengkap</string>
    <string name="overview">Overview</string>
    <string name="nama">Nama</string>
    <string name="_0876545336">0876545336</string>
    <string name="deskripsi">Deskripsi...</string>
    <string name="borrow_rp5000_00">Borrow Rp5000,00</string>
    <string name="since">Date of Loan</string>
    <string name="due_date">Due Date</string>
    <string name="total">Total :</string>
    <string name="details">Details</string>
    <string name="full_name">Full Name</string>
    <string name="description">Description</string>
    <string name="_12_03_2019">Mar 12, 2019</string>
    <string name="_15_03_2019">Mar 15, 2019</string>
    <string name="remaining">Remaining (Rp)</string>
    <string name="rp_0">Rp 0</string>
    <string name="total_lend_amount_rp">Total Lend Amount (Rp)</string>
    <string name="collected_rp">Collected (Rp)</string>
    <string name="_0">0</string>

</resources>
