<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="@dimen/spacing_medium"
                app:cardElevation="@dimen/spacing_xsmall"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                        android:text="@string/details"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/grey_view" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="@dimen/spacing_mlarge"
                            android:layout_margin="@dimen/spacing_middle"
                            android:src="@drawable/ic_people" />

                        <TextView
                            android:id="@+id/tv_detail_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_medium"
                            android:text="@string/full_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/material_grey_600" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="@dimen/spacing_mlarge"
                            android:layout_margin="@dimen/spacing_middle"
                            android:src="@drawable/ic_attach_money_green" />

                        <TextView
                            android:id="@+id/tv_detail_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_medium"
                            android:text="@string/_0876545336"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/material_grey_600" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="@dimen/spacing_mlarge"
                            android:layout_margin="@dimen/spacing_middle"
                            android:src="@drawable/ic_description" />

                        <TextView
                            android:id="@+id/tv_detail_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_medium"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/material_grey_600" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="@dimen/spacing_mlarge"
                            android:layout_margin="@dimen/spacing_middle"
                            android:src="@drawable/ic_date" />

                            <TextView
                                android:id="@+id/tv_detail_dl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/spacing_medium"
                                android:text="@string/_12_03_2019"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/material_grey_600" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="@dimen/spacing_mlarge"
                            android:layout_margin="@dimen/spacing_middle"
                            android:src="@drawable/ic_date" />

                        <TextView
                            android:id="@+id/tv_detail_dd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_medium"
                            android:text="@string/_15_03_2019"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/red" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <include
                android:id="@+id/total_amount_layout"
                layout="@layout/total_pembayaran_content" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>